syntax = "proto3";

package google.protobuf;

import "google/protobuf/timestamp.proto";

// PersistSubmittedTransaction represents a submitted transaction to be persisted.
message PersistSubmittedTransaction {
  // The ID of the orchestration instance.
  string orchestration_instance_id = 1;
  // The type of orchestration.
  OrchestrationType orchestration_type = 2;
  // The ID of the metering point.
  string metering_point_id = 3;
  // The ID of the transaction.
  string transaction_id = 4;
  // The registration timestamp of the transaction.
  Timestamp registration = 5;
  // The type of metering point.
  MeteringPointType metering_point_type = 6;
  // The unit of measurement.
  Unit unit = 7;
  // The resolution of the measurement.
  Resolution resolution = 8;
  // The start timestamp of the measurement period.
  Timestamp start = 9;
  // The end timestamp of the measurement period.
  Timestamp end = 10;
  // The points of measurement.
  repeated Point points = 11;
}

// Point represents a single measurement point.
message Point {
  // The position of the point in the series.
  int32 position = 1;
  // The quantity measured at the point.
  double quantity = 2;
  // The quality of the measurement.
  Quality quality = 3;
}

// OrchestrationType defines the type of orchestration.
enum OrchestrationType {
  ORCHESTRATION_TYPE_UNSPECIFIED = 0;
  ORCHESTRATION_TYPE_SUBMITTED_MEASURE_DATA = 1;
}

// Quality defines the quality of the measurement.
enum Quality {
  QUALITY_UNSPECIFIED = 0;
  QUALITY_MISSING = 1;
  QUALITY_ESTIMATED = 2;
  QUALITY_MEASURED = 3;
  QUALITY_CALCULATED = 4;
}

// MeteringPointType defines the type of metering point.
enum MeteringPointType {
  METERING_POINT_TYPE_UNSPECIFIED = 0;
  CONSUMPTION = 1;
  PRODUCTION = 2;
  EXCHANGE = 3;
  VE_PRODUCTION = 4;
  ANALYSIS = 5;
  NOT_USED = 6;
  SURPLUS_PRODUCTION_GROUP_6 = 7;
  NET_PRODUCTION = 8;
  SUPPLY_TO_GRID = 9;
  CONSUMPTION_FROM_GRID = 10;
  WHOLESALE_SERVICES_INFORMATION = 11;
  OWN_PRODUCTION = 12;
  NET_FROM_GRID = 13;
  NET_TO_GRID = 14;
  TOTAL_CONSUMPTION = 15;
  NET_LOSS_CORRECTION = 16;
  ELECTRICAL_HEATING = 17;
  NET_CONSUMPTION = 18;
  OTHER_CONSUMPTION = 19;
  OTHER_PRODUCTION = 20;
  EFFECT_PAYMENT = 21;
  EXCHANGE_REACTIVE_ENERGY = 22;
  COLLECTIVE_NET_PRODUCTION = 23;
  COLLECTIVE_NET_CONSUMPTION = 24;
}

// Unit defines the unit of measurement.
enum Unit {
  QUANTITY_UNIT_UNSPECIFIED = 0;
  QUANTITY_UNIT_KWH = 1;
  QUANTITY_UNIT_MWH = 2;
  QUANTITY_UNIT_MVARH = 3;
  QUANTITY_UNIT_KVARH = 4;
  QUANTITY_UNIT_KW = 5;
  QUANTITY_UNIT_T = 6;
  QUANTITY_UNIT_K3 = 7;
}

// Resolution defines the resolution of the measurement.
enum Resolution {
  RESOLUTION_UNSPECIFIED = 0;
  RESOLUTION_PT15M = 1;
  RESOLUTION_PT1H = 2;
}
